#+TITLE: Changelog

* Unreleased
** Updated
   - alias: update name and version for cljfmt tool
   - aliases: update library versions using `make dependencies-update`

   | :name                                   | :current   | :latest    |
   |-----------------------------------------|------------|------------|
   | com.github.flow-storm/clojure           | 1.12.3-1   | 1.12.3-4   |
   | com.github.flow-storm/flow-storm-dbg    | 4.5.8      | 4.5.9      |
   | dev.weavejester/cljfmt                  | 0.15.2     | 0.15.5     |
   | djblue/portal                           | 0.61.0     | 0.62.0     |
   | io.github.nextjournal/clerk             | 0.18.1150  | 0.18.1158  |
   | io.github.practicalli/project-templates | 2025-09-04 | 2025-11-09 |
   | nrepl/nrepl                             | 1.5.0      | 1.5.1      |

   - dev: updated GitHub action versions in all workflows

   | :file                                          | :name                                | :current   | :latest    |
   |------------------------------------------------|--------------------------------------|------------|------------|
   | .github/workflows/changelog-check.yaml         | actions/checkout                     | v5         | v6         |
   | .github/workflows/lint-review.yaml             | actions/checkout                     | v5         | v6         |
   | .github/workflows/megalinter.yaml              | actions/checkout                     | v5         | v6         |
   |                                                | actions/upload-artifact              | v4         | v5         |
   | .github/workflows/quality-checks.yaml          | actions/checkout                     | v5         | v6         |
   |                                                | clj-kondo/clj-kondo                  | 2025.09.22 | 2025.10.23 |
   | .github/workflows/scheduled-version-check.yaml | actions/checkout                     | v5         | v6         |

* 2025-10-16
** Updated