@@ -1,0 +1,36 @@
+name: Renovate version updates
+
+on:
+  schedule:
+    # Run on the first day of every month at 04:00 UTC
+    - cron: '0 4 1 * *'
+  workflow_dispatch: # Allow manual trigger
+
+jobs:
+  renovate:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🚀 Job automatically triggered by ${{ github.event_name }}"
+      - run: echo "🐧 Job running on ${{ runner.os }} server"
+      - run: echo "🐙 Using ${{ github.ref }} branch from ${{ github.repository }} repository"
+
+      - name: Checkout repository
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+          sparse-checkout: |
+            .github
+            deps.edn
+      - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
+
+      - name: Run Renovate
+        uses: renovatebot/github-action@v42
+        with:
+          configurationFile: .github/renovate.json
+          token: ${{ secrets.RENOVATE_TOKEN }}
+        env:
+          LOG_LEVEL: info
+
+      # Summary and status
+      - run: echo "🎨 Renovate version update check completed"
+      - run: echo "🍏 Job status is ${{ job.status }}."
